[project]
name = "smart-stocking"
version = "1.0.0"
description = "Multi-strategy stock screener built with Streamlit"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.28",
    "plotly>=5.15.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "aiohttp>=3.8.5",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.1.2",
    "python-dotenv>=1.0.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
